@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.67 2007/02/22 14:44:45 manu Exp $
+.\" $Id: greylist.conf.5,v 1.68 2007/02/24 22:10:21 manu Exp $
 .\"
 .\" Copyright (c) 2004-2007 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -642,6 +642,33 @@ statement, like in the example above:
 
   dacl blacklist urlcheck "extfilter"
   dacl whitelist default
+.PP
+It is also possible to gather the properties returned by the URL and reuse
+them in the ACL. This behavior is enabled by the
+.I getprop
+keyword at the end of 
+.I urlcheck 
+definition. If this option is enabled, the gathered properties can be 
+accessed in the current and following ACL by prefixing them by a dollar ($).
+.PP
+Here is an example that will use various DNSRBL depending on a per-recipient
+setting stored in the 
+.I dnsrbl
+attribute of a LDAP directory.
+.IP
+  dnsrbl "RBL2" "rbl.example.net" "127.0.0.2"
+  dnsrbl "RBL3" "rbl.example.net" "127.0.0.3"
+  dnsrbl "RBL4" "rbl.example.net" "127.0.0.4"
+  urlcheck "userconf" \\
+     "ldap://localhost/dc=example,dc=net?dnsrbl?one?mail=%r" \\
+     5 getprop
+
+  racl blacklist urlcheck "userconf" $dnsrbl "RBL2" dnsrbl "RBL2"
+  racl blacklist $dnsrbl "RBL3" dnsrbl "RBL3"
+  racl blacklist $dnsrbl "RBL4" dnsrbl "RBL4"
+.PP
+Note that when matching gathered properties, format strings and regex can
+be used.
 .PP
 .SH CUSTOM REPORTS
 The 
